--- a/VueJs_Explorer/index.html
+++ b/VueJs_Explorer/index.html
@@ -1,9 +1,89 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Vue.js 정리</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="index.css">
 <!-- 개발버전, 도움되는 콘솔 경고를 포함. -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-<!-- 상용버전, 속도와 용량이 최적화됨. -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
-<div id="app">
-    {{massage}}
-</div>
 
+</head>
+<h1>[필수요소 - 시작]</h1>
+    <h2> 선언적 렌더링</h2>
+
+        <div id="app">
+        1. {{ message }}
+        : js에 data를 선언하여 가져오기 {{ message }}
+        </div>
+
+        <div id="app-2">
+            <span v-bind:title="message">
+            2. v-bind : 글 위에 잠시 마우스를 올리면 동적으로 바인딩 된 title을 볼 수 있습니다!
+            </span>
+        </div>
+        <hr>
+
+    <h2>조건문과 반복문</h2>
+        <div id="app-3">
+            <p v-if="seen">1. v-if: 이제 나를 볼수 있어요(조건문 : true & false ) </p>
+        </div>
+        <div id="app-4">
+            2. v-for 디렉티브는 배열의 데이터를 바인딩
+            <ol> [Doto List]
+                <li v-for="todo in todos">
+                    {{todo.text}}
+                </li>
+            </ol>
+            <p>* 콘솔에서, app4.todos.push({ text: 'New item' })을 입력하십시오. Todo 목록에 새 항목이 동적으로 추가 된것을 볼 수 있습니다.</p>
+        </div>
+<hr>
+    <h2>사용자 입력 핸들링</h2>
+        <div id="app-5">
+            <h4>1. v-on 디렉티브를 사용하여 Vue 인스턴스에서 메소드를 호출하는 이벤트 리스너를 추가</h4>
+            <p>{{ message }}</p>
+            <button v-on:click="reverseMessage">메세지 뒤집기</button>
+            <p> - split() 나누고 : [ "안", "녕", "!", " ", "V", "u", "e", ".", "j", "s", "!" ]</p>
+            <p> - reverse() 뒤집고: [ "!", "s", "j", ".", "e", "u", "V", " ", "!", "녕", "안" ] </p>
+            <p> - join() 합치기! : !sj.euV !녕안 </p>
+        </div>
+
+        <div id="app-6">
+            <h4>2. 방향으로 바인딩하는 v-model 디렉티브</h4>
+            <p>{{message}}</p>
+            <input v-model="message">
+        </div>
+    <hr>
+
+        <h2>컴포넌트를 상한 작성방법</h2>
+        <h4>컴포넌트 시스템</h4>
+        <p>모든 유형의 애플리케이션 인터페이스를 컴포넌트 트리로 추상화 할수있습니다. </p>
+        <img src="V_01.png"/>
+
+        <div id= "app-7">
+            <h4>todo List</h4>
+            <p> * v-for : 배열데이터 바인딩 /v-bind:todo(객체),  v-bind:key(키) 필요  </p>
+            <ol>
+                <!-- todo-item 컴포넌트의 인스턴스 만들기
+                이제 각 todo-item 에 todo 객체를 제공합니다.
+                화면에 나오므로, 각 항목의 컨텐츠는 동적으로 바뀔 수 있습니다.
+                또한 각 구성 요소에 "키"를 제공해야합니다 (나중에 설명 됨). -->
+                <todo-item
+                    v-for="item in groceryList"
+                    v-bind:todo="item"
+                    v-bind:key="item.id"
+                ></todo-item>
+            </ol>
+        </div>
+<hr>
+<p>end</p>
+<span><a href="index2.html">next</a></span>
+
+
+</body>
+
+<script src="index.js"></script>
+
+</html>
