--- a/VueJs_Explorer/index3.html
+++ b/VueJs_Explorer/index3.html
@@ -87,7 +87,7 @@ message가 변경되지 않는 한, computed 속성인 reversedMessage를 여러
     <div id= "demo2">computed속성: {{fullName}}</div>
 
     <h2>#computed 속성의 setter 함수</h2>
-    <p>computed 속성은 기본적으로 getter 함수만 가지고 있지만, 필요한 경우 setter 함수를 만들어 쓸 수 있습니다.</p>
+    <textarea>computed 속성은 기본적으로 getter 함수만 가지고 있지만, 필요한 경우 setter 함수를 만들어 쓸 수 있습니다.</ㅅ>
 
     <div id= "demo3">setter 함수 : {{fullName}}</div>
 </body>
